--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- And the stuff that is inside <title>...Right here...</title> is going to be shown in the tab of the app in the browser -->
     <title>Mybrary,Which is the name of our application</title>
 </head>
 <body>
