--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,7 @@
     <title>Mybrary,Which is the name of our application</title>
 </head>
 <body>
-    Before asa
+    Before
     <br>
     <%- body %> 
     <br>
