--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,10 +8,9 @@
     <title>Mybrary,Which is the name of our application</title>
 </head>
 <body>
-    Before
+    <%- include('../partials/header.ejs')%>
     <br>
     <%- body %> 
-    <br>
-    After
+   
 </body>
 </html>
