--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <%- include('../partials/header.ejs')%>
-    <br>
+    <%- include('../partials/errorMessage.ejs')%>
     <%- body %> 
    
 </body>
