--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,3 +1,3 @@
 <label>Name</label>
-<input type="text" name="name2" value="<%= author.name %>">
-
+<input type="text" name="name2" >
+<!-- value="<%=  %>" -->
