--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <nav>
         <a href="/">Mybrary</a>
         <ul>
-            <li><a href="/authors">Auhors</a></li>
+            <li><a href="/authors/redo">Authors</a></li>
             <li><a href="/authors/new">Add Authors</a></li>
         </ul>
     </nav>
