--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,7 +1,10 @@
 <h2>Search authors</h2>
 <form action="/authors">
 <label>Name</label>
-<input type="text" name="name3" >
-<!-- value=" searchOptions.name " holds the searched input in the search field -->
+<input type="text" name="name3" value="<%= searchOptions.name3 %>">
+<!-- value="<%= searchOptions.name %>" holds the searched input in the search field -->
 <button type="submit">Search</button>
 </form>
+<!-- <% authors.forEach( author => { %>
+    <div><%= author.name %></div>
+<% }) %> -->
