--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -5,6 +5,6 @@
 <!-- value="<%= searchOptions.name %>" holds the searched input in the search field -->
 <button type="submit">Search</button>
 </form>
-<!-- <% authors.forEach( author => { %>
+<% authors.forEach( author => { %>
     <div><%= author.name %></div>
-<% }) %> -->
+<% }) %>
