--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,5 +1,32 @@
-<label>Title</label>
-<input type="text" name="title" value="<%= book.title %>" >
+<div><label>Title</label>
+<input type="text" name="title2" value="<%= book.title %>" ></div>
+<div>
 <label>Author</label>
-<select name="" value=""></select>
+<select name="author2">
+    <% authors.forEach( author => {%>
+        <% if(author.id===book.author){%>
+        <option selected label="<%=author.name%>" value="<%=author.id%>"> 
+        <% } else { %>
+        <option label="<%=author.name%>" value="<%=author.id%>">
+            <!-- Only the value of this 2nd label gets sown in the select box in the web page even if all the other label and value of the first option tag and the value="" gets removed -->
+        <% } %>
+    <% }) %>
+    
+    </select>
+</div>
+<div>
+    <label>Publish Date</label>
+    <input type="date" name="publishDate2" value="<%= book.publishDate==null ? '' : book.publishDate.toISOString().split('T')[0]%>">
+</div>
+<div>    
+<label>Page Count</label>
+    <input type="text" min="1" name="pageCount2" value="<% book.pageCount %>">
+</div>
+    <div><label>Cover</label>
+    <input type="file" name="cover">
+</div>
+<div>
+    <label>Description</label>
+    <textarea name="description2" id="" cols="30" rows="10"></textarea>
 <!-- value="<%=  %>" -->
+</div>
