--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -6,7 +6,7 @@
 <button type="submit">Search</button>
 </form>
 <% authors.forEach( author => { %>
-    <div><%= author.name %></div>
+    <div><%= author.name2 %></div>
     <a href="/authors/<%= author.id %>">view</a>
     <a href="/authors/<%= author.id %>/edit">edit</a>
     <%- include('../partials/deleteForm', {url: `/authors/${author.id}`})%>
