--- a/views/authors/afterLogin.ejs
+++ b/views/authors/afterLogin.ejs
@@ -7,7 +7,7 @@
       <a href="/authors/<%= author.id %>/edit">edit</a>
       <!-- <a href="/authors/<%= author.id %>">view</a> -->
       <!-- <a href="/authors/<%= author.id %>/edit">edit</a> -->
-      <!-- <%- include('../partials/deleteForm', {url: `/authors/${author.id}`})%> -->
+      <%- include('../partials/deleteForm', {url: `/authors/${author.id}`})%>
   <% }) %>
 </div>
 
