--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -11,3 +11,7 @@
     <a href="/authors/<%= author.id %>/edit">edit</a>
     <%- include('../partials/deleteForm', {url: `/authors/${author.id}`})%>
 <% }) %>
+<h1>Hi <%= name %></h1>
+<form action="/logout?_method=DELETE" method="POST">
+  <button type="submit">Log Out</button>
+</form>
