--- a/views/authors/login.ejs
+++ b/views/authors/login.ejs
@@ -5,11 +5,11 @@
 <form action="/login" method="POST">
   <div>
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" name="loginEmail" required>
   </div>
   <div>
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="loginPassword" required>
   </div>
   <button type="submit">Login</button>
 </form>
