--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -3,8 +3,23 @@
     </div>
 
     <form action="./register" method="POST">
-        <input type="name">
-        <input type="email">
-        <input type="password">
+       
+
+
+
+
+
+
+
+
+       
+            
+
+
+        <p>Name: </p><input type="name">
+        <p>Email: </p><input type="email">
+       <p>Password: </p> <input type="password">
+       <p>AuthName: </p> <input type="auth">
+       <br/>
         <button type="submit"> Register </button>
     </form>
