--- a/views/authors/login.ejs
+++ b/views/authors/login.ejs
@@ -2,6 +2,10 @@
 <% if (messages.error) { %>
   <%= messages.error %>
 <% } %>
+<% if (locals.objError){ %>
+  <%= objError %>
+  <% } %>
+ 
 <form action="/login" method="POST">
   <div>
     <label for="email">Email</label>
