--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
             <li><a href="/authors/new">Add Authors</a></li>
             <li><a href="/books">Books</a></li>
             <li><a href="/books/new">Add Books</a></li>
+            <li><a href="/authors/register">Register</a></li>
             <li><a href="/authors/login">logins</a></li>
         </ul>
     </nav>
