--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -2,7 +2,7 @@
         Registration
     </div>
 
-    <form action="./register" method="POST">
+    <form action="/authors/register" method="POST">
        
 
 
@@ -16,10 +16,10 @@
             
 
 
-        <p>Name: </p><input type="name">
-        <p>Email: </p><input type="email">
-       <p>Password: </p> <input type="password">
-       <p>AuthName: </p> <input type="auth">
+        <p>Name: </p><input type="name" name="name2">
+        <p>Email: </p><input type="email" name="email">
+       <p>Password: </p> <input type="password" name="password">
+       <p>AuthName: </p> <input type="auth" name="auth">
        <br/>
         <button type="submit"> Register </button>
     </form>
