--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -17,9 +17,9 @@
 
 
         <p>Name: </p><input type="name" name="name2">
-        <p>Email: </p><input type="email" name="email">
+     <!--  <p>Email: </p><input type="email" name="email">
        <p>Password: </p> <input type="password" name="password">
        <p>AuthName: </p> <input type="auth" name="auth">
-       <br/>
+       <br/>.   -->
         <button type="submit"> Register </button>
     </form>
