--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -16,10 +16,10 @@
             
 
 
-        <p>Name: </p><input type="name" name="name2">
-       <p>Email: </p><input type="email" name="email">
-       <p>Password: </p> <input type="password" name="password">
-       <p>AuthName: </p> <input type="auth" name="auth">
+        <p>Name: </p><input type="text" name="name2" required>
+       <p>Email: </p><input type="email" name="email" required>
+       <p>Password: </p> <input type="password" name="password" required>
+       <p>AuthName: </p> <input type="text" name="auth" required>
        <br/>
         <button type="submit"> Register </button>
     </form>
