--- a/views/authors/login.ejs
+++ b/views/authors/login.ejs
@@ -8,15 +8,17 @@
 
 
  
-<form action="/login" method="POST">
+<form action="/authors/login" method="POST">
   <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+    <label for="name">Name: </label>
+    <input type="text" id="email" name="loginName" required>
   </div>
   <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+    <label for="password">Password: </label>
+    <input type="password" id="password" name="loginPassword" required>
   </div>
   <button type="submit">Login</button>
 </form>
-<a href="/register">Register</a>
+<br>
+<label>Don't have an account? Register here.</label>
+<a href="/authors/register">Register</a>
