--- a/views/authors/login.ejs
+++ b/views/authors/login.ejs
@@ -16,6 +16,8 @@
   <div>
     <label for="password">Password: </label>
     <input type="password" id="password" name="loginPassword" required>
+    <label>Auth name: Give the registered auth name or any new auth name</label>
+    <input required type="text" name="loginAuth" >
   </div>
   <button type="submit">Login</button>
 </form>
