--- a/views/authors/register.ejs
+++ b/views/authors/register.ejs
@@ -19,7 +19,7 @@
         <p>Name: </p><input type="text" name="name2" required>
        <p>Email: </p><input type="email" name="email" required>
        <p>Password: </p> <input type="password" name="password" required>
-
+       <p>Auth nane: </p><input type="text" required name="auth">
        <br/>
         <button type="submit"> Register </button>
     </form>
