--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -11,7 +11,7 @@
 <input name="editEmail" />
 <label for="password"> Edit your password</label>
 <input name="editPassword" />
-<a href="/authors">Cancel</a>
+<a href="/authors/profile">Cancel</a>
 
 <button type="submit">Update</button>
 </form>
