--- a/views/authors/profile.ejs
+++ b/views/authors/profile.ejs
@@ -8,9 +8,10 @@
       <!-- <a href="/authors/<%= author.id %>">view</a> -->
       <!-- <a href="/authors/<%= author.id %>/edit">edit</a> -->
       <%- include('../partials/deleteForm', {url: `/authors/${author.id}`})%>
+      <form href="/authors/logout" method="POST"><button>Logout</button></form>
   <% }) %>
-  <br>
-   <br>
-   <a href="/authors/logout" method="POST" ></a>
+  
+   
+   
 </div>
 
