--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
             <li><a href="/books/new">Add Books</a></li>
             <li><a href="/authors/register">Register</a></li>
             <li><a href="/authors/login">logins</a></li>
+            <a href="/authors/profile">profile</a>
+            <a href="/authors/logout" >logout</a>
         </ul>
     </nav>
 </header>
