--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,8 @@
             <li><a href="/authors/register">Register</a></li>
             <li><a href="/authors/login">logins</a></li>
             <a href="/authors/profile">profile</a>
-            <a href="/authors/logout" >logout</a>
+            <br>
+            <form action="/authors/logout" method="POST" ><button>logout</button></form>
         </ul>
     </nav>
 </header>
