--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
             <li><a href="/books/new">Add Books</a></li>
             <li><a href="/authors/register">Register</a></li>
             <li><a href="/authors/login">logins</a></li>
-            <a href="/authors/profile">profile</a>
+            <form action="/authors/profile" method="GET"><button>profile</button></form>
             <br>
             <form action="/authors/logout" method="POST" ><button>logout</button></form>
         </ul>
