--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,9 @@
 <header>
     <nav>
-        <a href="/">Mybrary</a>
+        <a href="/">Zicz</a>
         <ul>
             <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Authors</a></li>
+
             <li><a href="/books">Books</a></li>
             <li><a href="/books/new">Add Books</a></li>
             <li><a href="/authors/register">Register</a></li>
